# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  15 Aug 2008; Daniel Robbins <drobbins@funtoo.org>
  forgot:
  stage1 now has ccache enabled. Will see if this breaks anything. If not,
  then yay.

  15 Aug 2008; Daniel Robbins <drobbins@funtoo.org>
  many files:
  totally removed AUTORESUME and digest support. This is beta and there are
  likely still digest issues/bugs in the code that I haven't hit yet. Once it
  is all removed, we should have jettisoned about 200 or so lines of code?
  Makes it a lot simpler. Want to have an external program do digests rather
  than have it so integrated.

  15 Aug 2008; Daniel Robbins <drobbins@funtoo.org>
  modules/generic_stage_target.py,
  modules/snapshot_target.py,
  catalyst:
  Now we support "portdir" and "portname" settings, and "portdir" can now
  point to a git repo. "portname" allows you to use a name other than
  "portage" in your portage snapshot tarball so you can have an experimental
  tree called "funtoo" or "gleep" for example, and generate
  "gleep-2008.08.15.tar.bz2" snapshots in the snapshots/ directory. Yay!

  25 Mar 2008; Daniel Robbins <drobbins@funtoo.org>
  arch/x86.py,
  arch/amd64.py:
  Added core32 and core64 subarchitectures - synced with upstream as much
  as possible while preserving funtoo "core32" and "core64" extensions.

  10 Jan 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is now 2.0.5 for release.

  25 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  files/catalyst.conf, modules/catalyst_support.py,
  modules/generic_stage_target.py,
  targets/embedded/embedded-preclean-chroot.sh,
  targets/grp/grp-preclean-chroot.sh,
  targets/livecd-stage1/livecd-stage1-preclean-chroot.sh,
  targets/stage2/stage2-preclean-chroot.sh,
  targets/stage3/stage3-preclean-chroot.sh,
  targets/support/chroot-functions.sh,
  targets/tinderbox/tinderbox-preclean-chroot.sh:
  Applying a patch from Tais M. Hansen <tais.hansen@osd.dk> to add initial