@@ -17,7 +17,30 @@ case $1 in
 
 		rm ${clst_chroot_path}/etc/make.profile
 		ln -s ../usr/portage/profiles/${clst_profile} ${clst_chroot_path}/etc/make.profile
-
+#
+#	This is a useful piece of code to debug various build issues. May add it as a "probes" feature
+#	in the future. I used it to find that baselayout-2.0.0 was totally frying /usr/lib/gcc if it
+#	was merged after gcc. Now fixed temporarily by forcing baselayout to merge first- zmedico is
+#	working on a correct fix.
+#
+#		# debug GCC issue
+#		outfile=/tmp/stage1root/usr/bin/debug.log
+#		cat << EOF > ${clst_chroot_path}/etc/portage/bashrc
+##!/bin/bash
+#SANDBOX_ON=0
+#echo \$P \$EBUILD_PHASE >> $outfile
+#if [ "\$EBUILD_PHASE" != "depend" ]
+#then 
+#if [ -d /tmp/stage1root/usr/lib/gcc ]
+#then
+#	install -d /tmp/stage1root/usr/bin/debug
+#	echo "/tmp/stage1root/usr/bin/debug/\$P.\$EBUILD_PHASE.log"  >> $outfile
+#	{ cd /tmp/stage1root/usr/lib/gcc; find > /tmp/stage1root/usr/bin/debug/\$P.\$EBUILD_PHASE.log; }
+#	echo >> $outfile
+#fi
+#fi
+#SANDBOX_ON=1
+#EOF
 		# Setup make.conf and make.profile link in "ROOT in chroot":
 		copy_to_chroot ${clst_chroot_path}/etc/make.conf /${clst_root_path}/etc
 		copy_to_chroot ${clst_chroot_path}/etc/make.profile \
